--- a/src/main/resources/example.properties
+++ b/src/main/resources/example.properties
@@ -5,3 +5,14 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#spring.mail.host=smtp.mailtrap.io
+#spring.mail.port=2525
+#spring.mail.username=username
+#spring.mail.password=password
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.from=admin@example.com
+#
+#spring.security.user.name=username
+#spring.security.user.password=password
